# SWEProject

./: .dockerignore  .gitignore  Makefile  SOW.md  docker-compose.yaml  package-lock.json  package.json
design/: Statement of Work.md
react-typescript-login-example/: package.json
react-typescript-login-example/src/components/: spreadsheets.jsx
spreadServer/: Cargo.toml
spreadServer/src/: database.rs  main.rs  publisher.rs  serverRequest.rs  users.rs
src/: App.css
src/backend/: .env.example  Cargo.toml  Dockerfile  README.Docker.md  README.md  cert.pem  cert.perm  diesel.toml  key.pem  key.perm
src/backend/migrations/2024-05-02-154831_create_sheet/: down.sql  up.sql
src/backend/migrations/2024-05-30-142534_auth_users/: up.sql
src/backend/migrations/2024-05-30-223115_create_sheet_elems/: up.sql
src/backend/migrations/2024-05-31-223058_create_publishers/: down.sql  up.sql
src/backend/migrations/2024-05-31-223115_create_sheets/: down.sql  up.sql
src/backend/migrations/2024-05-31-223335_create_sheet_publisher_relations/: down.sql  up.sql
src/backend/migrations/2024-06-02-154831_create_sheet/: down.sql  up.sql
src/backend/migrations/2024-06-03-172726_create_updates/: down.sql  up.sql
src/backend/src/: auth.rs  database.rs  lib.rs  main.rs  publisher.rs  results.rs  schema.rs  server_request.rs  sheet.rs  updates.rs
src/backend/tests/: testRes.rs
src/components/: board-admin.component.tsx  board-moderator.component.tsx  board-user.component.tsx  home.component.tsx  login.component.tsx  profile.component.tsx  register.component.tsx  spreadsheets.jsx  topmenu.jsx
src/frontend/app/: README.md  package-lock.json  package.json
src/frontend/app/public/: index.html
src/frontend/app/src/: App.css  App.js  App.tsx  cell.test.tsx  parser.test.tsx  spreadsheets.test.tsx  (+1 more)
src/frontend/loginpage/: package-lock.json
src/services/: auth-header.ts  auth.service.ts
src/sheetsFrontend/: app.js  app.test.ts  app.ts  menus.html  package-lock.json  package.json  styles.css
src/spreadServer/: Cargo.toml  cert.pem  key.pem
src/spreadServer/src/: database.rs  lib.rs  main.rs  publisher.rs  results.rs  serverRequest.rs  server_request.rs
src/spreadServer/tests/: testRes.rs
(+25 files in other folders)
