[lib]
name = "libs"
path = "src/lib.rs"


[package]
name = "spread_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bins"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde_json = "1.0.79"
serde = { version = "1.0.197", features = ["derive"] }
actix-web-httpauth = "0.8.1"
openssl = { version = "0.10" }
base64 = "0.22.1"
diesel = { version = "2.1.6", features = ["postgres", "postgres_backend"] }
dotenv = "0.15.0"
