[package]
name = "spreadServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde_json = "1.0.79"
serde = { version = "1.0.197", features = ["derive"] }
actix-web-httpauth = "0.8.1"
openssl = { version = "0.10" }
